--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Ozitechnology",
-  "description": "This is the fulfillment for dialogflow",
+  "name": "Bazzcode",
+  "description": "This is the webhook for dialogflow",
   "version": "0.0.1",
   "private": true,
   "license": "Apache Version 2.0",
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "node index.js",
     "deploy": "git add . && git commit -m 'changes' && git push",
-    "heroku": "git add . && git status && git commit -am 'spreedsheet-api' && git push heroku master"
+    "heroku": "git add . && git status && git commit -am 'bazzcode-api' && git push heroku master"
   },
   "dependencies": {
     "actions-on-google": "^2.2.0",
