--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "actions-on-google": "^2.2.0",
     "axios": "^0.20.0",
+    "express-async-handler": "^1.1.4",
     "dialogflow": "^1.2.0",
     "dialogflow-fulfillment": "^0.5.0",
     "firebase": "7.12.0",
