--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Bazzcode",
+  "name": "bazzcode",
   "description": "This is the webhook for dialogflow",
   "version": "0.0.1",
   "private": true,
@@ -16,12 +16,13 @@
   "dependencies": {
     "actions-on-google": "^2.2.0",
     "axios": "^0.20.0",
-    "express-async-handler": "^1.1.4",
     "dialogflow": "^1.2.0",
     "dialogflow-fulfillment": "^0.5.0",
+    "express-async-handler": "^1.1.4",
     "firebase": "7.12.0",
     "firebase-admin": "^5.13.1",
     "firebase-functions": "^2.0.2",
-    "nodemailer": "^6.4.6"
+    "nodemailer": "^6.4.6",
+    "request-promise-native": "^1.0.9"
   }
 }
